--- a/alphalambda.html
+++ b/alphalambda.html
@@ -65,39 +65,14 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
-  <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
-  </div>
+  <div class="page-header">Alpha Lambda Chapter</div>
+    <p>The Alpha Lambda Chapter at Washington University in St. Louis is the 34th chapter of AKPsi. We welcome students from all undergraduate programs.... aj;lkda fkaljdkl;af dkal;fdkja ;fkldja; kldfj a;lkdjf aklsdjf;ak jdfka;j dfk;a djfka;d kfja ;kldsfj akldjf ;aljsdfk d;alkdj fa;lkdj fkd;akd;afj ;kj fa sdjkf; alkdj fja;dklfj a;kldj f</p>
+    <div class="subsection-header">Our Awards</div>
+      <p>Our awards from nationals 1, 2, 3...</p>
+    <div class="subsection header">Brotherhood Statistics</div>
+      <iframe width=600 height=1987 frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/5330921-untitled-report"></iframe>
 </div>
 
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
-</div>
 <!-- Body End -->
 
 <div class="padding"></div>
