--- a/alumni.html
+++ b/alumni.html
@@ -65,38 +65,15 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
+<div class="page-header">Alumni</div>
+  <div class="col-md-8">
   <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
+    <div class="section-header">Tell us what you're up to!</div>
+    <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="http://form.jotform.us/form/51050185498154" frameborder="0" style="width:100%; height:1029px; border:none;" scrolling="no"></iframe>
+    <script type="text/javascript">window.handleIFrameMessage = function(e) {var args = e.data.split(":");var iframe = document.getElementById("JotFormIFrame");if (!iframe)return;switch (args[0]) {case "scrollIntoView":iframe.scrollIntoView();break;case "setHeight":iframe.style.height = args[1] + "px";break;case "collapseErrorPage":if (iframe.clientHeight > window.innerHeight) {iframe.style.height = window.innerHeight + "px";}break;case "reloadPage":window.location.reload();break;}};if (window.addEventListener) {window.addEventListener("message", handleIFrameMessage, false);} else if (window.attachEvent) {window.attachEvent("onmessage", handleIFrameMessage);}</script>
+    <p>Please contact our VP of Alumni Relations Morgan Hess at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">morganhess@wustl.edu</a> for any questions or inquiries.</p>
   </div>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
+  </div>
 </div>
 <!-- Body End -->
 
