--- a/brothers.html
+++ b/brothers.html
@@ -65,9 +65,10 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
+  <div class="page-header">Meet Our Chapter</div>
   <div class="row">
     <div class="image"><img src="http://placehold.it/400x250"></div>
+    <!-- Include a photo collage/carousel of all our pictures together as a brotherhood to emphasize that element -->
   </div>
 </div>
 
@@ -75,28 +76,145 @@
 <div class="padding"></div>
 
 <div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
+  <div class="row">
+  <div class="section-header">Collegiate Members</div>
+    <div class="col-md-3">
+      <div class="subsection-header">Class of 2015</div>
+      <ul style="list-style-type:none">
+        <li>Damil Adefarati</li>
+        <li>Jack Barrow</li>
+        <li>Kathy Chang</li>
+        <li>Sophie Cook</li>
+        <li>James Cregan</li>
+        <li>Kenny Dolgin</li>
+        <li>Seira Furukawa</li>
+        <li>Matt Gallop</li>
+        <li>Sam Gorsche</li>
+        <li>Andrew Green</li>
+        <li>Ali Guttridge</li>
+        <li>Hayley Hanes</li>
+        <li>Evan Hindes</li>
+        <li>Gary Huang</li>
+        <li>Ashley Hudson</li>
+        <li>Yuichiro Katagiri</li>
+        <li>Caroline Kay</li>
+        <li>Oliver Krengel</li>
+        <li>Joo Lee</li>
+        <li>Caroline Leffert</li>
+        <li>Katie Li</li>
+        <li>Melissa Milbrandt</li>
+        <li>Blake Nachman</li>
+        <li>Eric Neiman</li>
+        <li>Amanda Ng</li>
+        <li>Sophie Revere</li>
+        <li>Spencer Romo</li>
+        <li>Matt Russell</li>
+        <li>Alison Schwartz</li>
+        <li>Dylan Stone</li>
+        <li>Kathleen Szabo</li>
+        <li>Michael Tarazi</li>
+        <li>Matt Whitney</li>
+      </ul>
     </div>
 
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
+    <div class="col-md-3">
+    <div class="subsection-header">Class of 2016</div>
+      <ul style="list-style-type:none">
+        <li>Samantha Blum</li>
+        <li>Gad Jacob Choi</li>
+        <li>Katherine Chu</li>
+        <li>Nick Cooley</li>
+        <li>Alyson Coran</li>
+        <li>Siena Dixon</li>
+        <li>Josh Dubin</li>
+        <li>Maggie Edelman</li>
+        <li>Samantha Hindes</li>
+        <li>Juliette Hourani</li>
+        <li>Sam Isenberg</li>
+        <li>Ellen Kaushansky</li>
+        <li>Lauren Korlewitz</li>
+        <li>Alexandra Michaels</li>
+        <li>Azhar Pirani</li>
+        <li>Kim Plumer</li>
+        <li>Prema Roberts</li>
+        <li>Casey Rogovin</li>
+        <li>Michelle Shtivelberg</li>
+        <li>Amy Solomon</li>
+        <li>Amy Wang</li>
+        <li>Jameson West</li>
+        <li>Raissa Xie</li>
+        <li>Kristine Yang</li>
+        <li>Connie Zhou</li>
+      </ul>
     </div>
 
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
+    <div class="col-md-3">
+    <div class="subsection-header">Class of 2017</div>
+      <ul style="list-style-type:none">
+        <li>Shrey Aggarwal</li>
+        <li>Brooke Barrow</li>
+        <li>Ryan Becker</li>
+        <li>Rebecca Benson</li>
+        <li>Theja Bhamidipati</li>
+        <li>Jenna Burns</li>
+        <li>Ophelia Chen</li>
+        <li>Justin Cho</li>
+        <li>Ellie Cooney</li>
+        <li>Jarian Cottingham</li>
+        <li>Bea DyBuncio</li>
+        <li>Tyler Friedman</li>
+        <li>Amanda Gallop</li>
+        <li>Oliver Gallop</li>
+        <li>Arjun Gandhi</li>
+        <li>Andrew Glantz</li>
+        <li>Morgan Hess</li>
+        <li>Adam Kaminsky</li>
+        <li>Nick Kauzlarich</li>
+        <li>Ariel Kobliner</li>
+        <li>Emily Levine</li>
+        <li>Matthew Liu</li>
+        <li>Wilson Ma</li>
+        <li>Nooreen Moosa</li>
+        <li>Anjan Narain</li>
+        <li>Nina Nepa</li>
+        <li>Chi Nguyen</li>
+        <li>Katherine Odom</li>
+        <li>Jenna Pearlson</li>
+        <li>Hannah Perl</li>
+        <li>Jessie Prussick</li>
+        <li>Esteban Recht</li>
+        <li>Sterling Rollins</li>
+        <li>Amanda Ross</li>
+        <li>Emily Rubin</li>
+        <li>Nicola Salzman</li>
+        <li>Casey Sands</li>
+        <li>Sam Taubenfeld</li>
+        <li>George Teslovich</li>
+        <li>Casey Wagenaar</li>
+        <li>Grace Wang</li>
+        <li>Jacob Weiss</li>
+      </ul>
     </div>
+
+    <div class="col-md-3">
+    <div class="subsection-header">Class of 2018</div>
+      <ul style="list-style-type:none">
+        <li>Carly Abramowitz</li>
+        <li>Matt Agritelley</li>
+        <li>Arvind Balasundaram</li>
+        <li>Liv Dansky</li>
+        <li>Weber Gaowen</li>
+        <li>Jonathan Getzoff</li>
+        <li>Tess Gong</li>
+        <li>Mikaela Hong</li>
+        <li>Liz Meijer</li>
+        <li>Sara Miller</li>
+        <li>Lauren Niman</li>
+        <li>Harrison Silverstein</li>
+        <li>Shawdon Zadeh</li>
+      </ul>
+    </div>
+  </div>
 </div>
 <!-- Body End -->
 
