--- a/rush.html
+++ b/rush.html
@@ -65,7 +65,7 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
+  <div class="page-header">Rush Alpha Kappa Psi</div>
   <div class="row">
     <div class="image"><img src="http://placehold.it/400x250"></div>
   </div>
@@ -75,28 +75,52 @@
 <div class="padding"></div>
 
 <div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="section-header">Why rush AKPsi?</div>
+        <p>Alpha Kappa Psi offers .... jak;dljf lkj falkjds f;lakjs dfklja sdklf;aj s;dlkfj a;lskdfj a;lksdjf alk;jdf alk;sdjf al;ksj f jfkld;a jksl;df ja;lsdj fkal;jsdf ;lkajd f;lka fjkd;a fjkdl;a fjkd;a  jkd;a fdjk;la fjdk;a fjdk;akjf a; fjkd; akldfj ;akljdf</p>
+      <div class="section-header">What is the recruitment process?</div>
+        <p>Alpha Kappa Psi offers .... jak;dljf lkj falkjds f;lakjs dfklja sdklf;aj s;dlkfj a;lskdfj a;lksdjf alk;jdf alk;sdjf al;ksj f jfkld;a jksl;df ja;lsdj fkal;jsdf ;lkajd f;lka fjkd;a fjkdl;a fjkd;a  jkd;a fdjk;la fjdk;a fjdk;akjf a; fjkd; akldfj ;akljdf</p>
+      <div class="section-header">Qualifications</div>
+        <p>Eligibility for rush: jkd;a flkja flkdj a;lkfj da;lkjd f;lakjd f;lakj dflkajd f;lakjd f;alkjd fl;kaj dlkfja ;ldkjf a;lksdjf a;lksdjf a;lkdjsf a;lkdj fal;kjdfkl; ajskld; fjkal;dfj a;lksdjf a;ljdklf;ajsd;lfa  jkd;lafjkla;lkdjf a;lkdsjf a;lksjdf alkjfd a;lkjdf ;alkjd f;alkj</p>
+      <div class="section-header">Frequently Asked Questions</div>
+        <div class="question">Question 1</div>
+        <div class="answer">Answer 1</div>
+        <div class="question">Question 2</div>
+        <div class="answer">Answer 2</div>
+        <div class="question">Question 3</div>
+        <div class="answer">Answer 3</div>
+        <div class="question">Question 4</div>
+        <div class="answer">Answer 4</div>
+        <div class="question">Question 5</div>
+        <div class="answer">Answer 5</div>
+        <div class="question">Question 6</div>
+        <div class="answer">Answer 6</div>
+        <div class="question">Question 7</div>
+        <div class="answer">Answer 7</div>
+        <div class="question">Question 8</div>
+        <div class="answer">Answer 8</div>
+      <div class="section-header">Brother Testimonials</div>
+        <div class="brother">Brother 1</div>
+        <div class="testimonial">Testimonial 1</div>
+        <div class="brother">Brother 2</div>
+        <div class="testimonial">Testimonial 2</div>
+        <div class="brother">Brother 3</div>
+        <div class="testimonial">Testimonial 3</div>
     </div>
 
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
+    <div class="col-md-34">
+      <div class="section-header">Rush Calendar</div>
+      <p>Spring Rush begins at the end of January 2015! Our main events include:</p>
+        <div class="rush-event">Information Session #1</div>
+        <div class="rush-event">Information Session #2</div>
+        <div class="rush-event">Speed Dating</div>
+        <div class="rush-event">Sundae Bar</div>
+        <div class="rush-event">Closed Rush Event #1</div>
+        <div class="rush-event">Closed Rush Event #2</div>
     </div>
 
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
+  </div>
 </div>
 <!-- Body End -->
 
