--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
+  <div class="page-header">Alpha Kappa Psi</div>
   <div class="row">
     <div class="image"><img src="http://placehold.it/400x250"></div>
   </div>
@@ -75,29 +75,16 @@
 <div class="padding"></div>
 
 <div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
-</div>
+    <p>As an international professional business fraternity, Alpha Kappa Psi aims to... jdka;jfk lkja dk;lfaj sdl;kf alk;sdjf a;lkjd flka;jd f;klaj dlfkj a;lksdjf a;lksdjf akljdf akl;djf aklsdj faksdjfl;kas jdkf;lasdlkfj a;kldjf akldjf al;ksdjf a;lksdjf a;klsdjf a;sldkfj<br>Fraternity facts:</p>
+    <ul>
+      <li>Membership: 240,000 members world-wide</li>
+      <li>Chapters: 300+ chapters</li>
+      <li>Tagline: Shaping people, shaping business</li>
+      <li>Vision: Alpha Kappa Psi is recognized as the premier developer of principled business leaders</li>
+      <li>Core Values: Brotherhood, Knowledge, Integrity, Service, Unity</li>
+      <li>Guiding Principles: Building Brotherhood, Lifelong Learning, High Ethical Standards, Improving Communities, Enhancing the Fraternity for Life</li>
+      <li>Objects of the Fraternity: To further the individual welfare of its members; To foster scientific research in the fields of commerce, accounts, and finance; To educate the public to appareciate and demand higher ideals therein; To promote and advance in institutions of college rank, courses leading to degrees in business administration</li>
+    </ul>
 <!-- Body End -->
 
 <div class="padding"></div>
