--- a/careers.html
+++ b/careers.html
@@ -65,38 +65,15 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
-  <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
+<div class="page-header">AKPsi Careers</div>
+  <div class="col-md-12">
+    <div class="section-header">Join the World's Largest Professional Network</div>
+      <p>Our professional network ;alkdj faklsdj fakl;djf al;kdsfj al;djfkl;akdjf a;lksdj f;lakjd f;alkjdf ;alkjd fkaljdf a;lksdjf ;lkajsdf a;lkjd f;alkjsd f;lakjsd fa;lksjd f;alksjdf a;lksdjf a;lkjsdf al;kjsd f;lksaj ;lfkasdjfl;ajdf ;</p>
+    <div class="section-header">Our Professional Events</div>
+      <p>These are some of our most recent professional events alkjd a;lf jal;kd fjal; dsfjlka;d fjipowqenv kruqi jfkld;aufeoinf l;kajpiojwkflj   p;akjdpfique fpoijdkapfieoqu jkd;al ufqipeoifj afpij qieojf apiodjf ajsdf pqoiwej ffjda; ufoia fjapsjf dioa</p>
+    <div class="section-header">Companies We Work For</div>
+      <p>Include icons of many of the major companies we have worked for in the past 3 graduating classes af ;lkadj f;al fldsjka f;lkadj f;laj fdk;lajf ;ladj f;aljd f;lakjd f;lajksd flk;aj d;lkfja ;lsdkfj a;lkjd flka;jdf alk;dsjf a;l jkl;das;fla fl;akjd ;salfjk a;slj dklf ld;ajkf a;l</p>
   </div>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
 </div>
 <!-- Body End -->
 
