--- a/facultyadvisor.html
+++ b/facultyadvisor.html
@@ -65,38 +65,22 @@
 
 <!-- Body Start -->
 <div class="container">
-<div class="page-header">The Premier Developer of Principled Business Leaders</div>
+  <div class="page-header">Faculty Advisor</div>
   <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
+    <div class="col-md-3">
+      <img src="http://placehold.it/180x200" alt="yoongroves" class="img-responsive">
+    </div>
+
+    <div class="col-md-9">
+      <div class="subsection-header">Yoon Groves</div>
+      <p>Associate Director for Advising and Student Services
+      <br>Student Services, Olin Business School
+      <br>Washington University in St. Louis
+      <br><a href="mailto:yoongroves@wustl.edu?Subject=Hi,%20Yoon!" target="_top">yoon.groves@wustl.edu</a>
+      <br>(314) 935-3328
+      <br><br>Yoon Groves joined the Olin staff in 2012 in her role as academic advisor. She additionally works closely with student groups, including Alpha Kappa Psi.</p>
+    </div>
   </div>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-    <p>Alpha Kappa Psi is a professional business fraternity at Washington University in St. Louis dedicated to building brotherhood, lifelong learning, high ethical standards, improving communities, and enhancing the fraternity for life. The Alpha Lambda chapter is commited to the development of the fraternity through brotherhood, professional and service events......</p>
-</div>
-
-<div class="padding"></div>
-<div class="padding"></div>
-
-<div class="container">
-  <div class="section-header">Announcements</div>
-    <div class="col-md-4">
-      <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process, and we are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers.</p>
-    </div>
 </div>
 <!-- Body End -->
 
